Update Customer Churn Prediction.ipynb

--- a/Customer Churn Prediction.ipynb
+++ b/Customer Churn Prediction.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "                         UNDER SUPERVISION OF \n",
-    "                         MR.VIVEK PANDEY SIR"
+    "                         Ms. Priyanka Ma'am"
    ]
   },
   {
